Fixed minor naming problems and added style updates

--- a/src/components/JokeHomePage/JokeHomePageStyles.css
+++ b/src/components/JokeHomePage/JokeHomePageStyles.css
@@ -1,6 +1,6 @@
 .jokeHomePageContainer {
   background-color: #f6e5cb;
-  background-image: url("public\\jokeHomePageImages\\jokeHomePageBg.png");
+  background-image: url("\\jokeHomePageImages\\jokeHomePageBg.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
