--- a/src/components/JokeHomePage/JokeHomePageStyles.css
+++ b/src/components/JokeHomePage/JokeHomePageStyles.css
@@ -1,5 +1,5 @@
 .jokeHomePageContainer {
-  background-color: #f6e5cb;
+  background-color: #f5ece0;
   background-image: url("\\jokeHomePageImages\\jokeHomePageBg.png");
   background-repeat: no-repeat;
   background-size: cover;
