--- a/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
+++ b/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
@@ -23,6 +23,7 @@
 .jokeTopSideContainer {
   position: relative;
 }
+
 .jokeCardCategoryBubble {
   position: absolute;
   width: 3rem;
@@ -58,4 +59,168 @@
   justify-content: flex-end;
   gap: 1rem;
   border-radius: 0 0 10px 10px;
+}
+
+/*---------------small card styles -------------*/
+.jokeCard-containerS {
+  width: 10rem;
+  height: 2px;
+  background-color: rgb(253, 250, 250);
+  border-radius: 2px;
+  position: relative;
+  user-select: none;
+}
+
+.jokeCardBgS {
+  width: 100%;
+  border-radius: 2px 2px 0 0;
+}
+.jokeCardTopIconS {
+  width: 2rem;
+  position: absolute;
+  top: -60%;
+  left: 3%;
+}
+
+.jokeTopSideContainerS {
+  position: relative;
+  top: 0.2rem;
+  width: 13rem;
+}
+.jokeCardCategoryBubbleS {
+  position: absolute;
+  width: 1rem;
+  right: 0%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.jokeTextS {
+  padding: 1rem;
+  background-color: aliceblue;
+  max-width: 11rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favoriteIconS {
+  height: 1rem;
+  cursor: pointer;
+}
+.likeIconS {
+  height: 1rem;
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+.jokeCardUserAction-containerS {
+  height: 2.5rem;
+  max-width: 13rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+  border-radius: 0 0 10px 10px;
+}
+
+/*-------------------------------large card styles ---------------------*/
+
+.jokeCard-containerL {
+  width: 45rem;
+  background-color: rgb(253, 250, 250);
+  border-radius: 20px;
+  position: relative;
+  user-select: none;
+  bottom: 130%;
+  margin-bottom: 3rem;
+}
+
+.jokeCardBgL {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+.jokeCardTopIconL {
+  width: 4rem;
+  position: absolute;
+  top: -27%;
+  left: 3%;
+}
+
+.jokeTopSideContainerL {
+  position: relative;
+}
+
+.jokeCardCategoryBubbleL {
+  position: absolute;
+  width: 3rem;
+  right: 0%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.jokeTextL {
+  min-width: 60%;
+  min-height: 15rem;
+  padding: 1rem;
+  background-color: aliceblue;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favoriteIconL {
+  height: 1.5rem;
+  cursor: pointer;
+}
+.likeIconL {
+  height: 1.5rem;
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+.jokeCardUserAction-containerL {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+  border-radius: 0 0 10px 10px;
+}
+.arrowContainer {
+  height: 100%;
+  position: absolute;
+  background-color: rgba(77, 77, 77, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.leftArrow {
+  left: 0%;
+  top: 0%;
+}
+
+.rightArrow {
+  top: 0%;
+  right: 0%;
+  transform: rotate(180deg);
+}
+
+.arrowContainer > img {
+  width: 3.5rem;
+}
+
+.carouselArrow:hover {
+  filter: invert();
+}
+
+.carouselArrow {
+  user-select: none;
 }
