--- a/src/components/ProfilePage/components/JokeProfileCard/JokeProfileCardStyles.css
+++ b/src/components/ProfilePage/components/JokeProfileCard/JokeProfileCardStyles.css
@@ -1,11 +1,15 @@
 .jokeProfileCard-wrapper {
-  width: 80%;
+  max-width: 75%;
   height: 100%;
   background-color: #38b6ff;
   margin-left: 2rem;
   background-image: url("\\profilePageImgs\\JokeProfileContainerBg.png");
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
 .topHeader {
   width: 100%;
@@ -23,4 +27,56 @@
   position: absolute;
   top: 0%;
   left: 0%;
+}
+.ProfileJokeCarouselContainer {
+  width: 100%;
+  height: 100%;
+  margin-top: 5%;
+}
+
+.ProfileJokeCarousel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  overflow-x: scroll;
+  gap: 1rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  scroll-behavior: smooth;
+}
+
+.ProfileJokeCarousel::-webkit-scrollbar {
+  display: none;
+}
+.spotlightJokeContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ProfileJokeCarouselWrapper {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rightArrow {
+  position: absolute;
+  right: 0%;
+  z-index: 1;
+  height: 100%;
+  top: 0%;
+}
+.leftArrow {
+  position: absolute;
+  left: 0%;
+  z-index: 1;
+  height: 100%;
+  top: 0%;
 }
