--- a/src/components/ProfilePage/components/StoreCard/StoreProfileCardStyles.css
+++ b/src/components/ProfilePage/components/StoreCard/StoreProfileCardStyles.css
@@ -1,5 +1,6 @@
 .storeProfileCard-wrapper {
-  width: 80%;
+  max-width: 75%;
+  min-width: 75%;
   height: 100%;
   background-color: #38b6ff;
   margin-left: 2rem;
