--- a/src/components/JokeHomePage/components/JokeCardsContainer/JokeCardsContainerStyles.css
+++ b/src/components/JokeHomePage/components/JokeCardsContainer/JokeCardsContainerStyles.css
@@ -23,6 +23,17 @@
   height: 90%;
   margin-bottom: 10%;
   overflow-y: scroll;
+  animation: fadeOut 0.3s forwards;
+  animation-timeline: scroll();
+}
+
+@keyframes fadeOut {
+  from {
+    filter: blur(0);
+  }
+  to {
+    filter: blur(1rem);
+  }
 }
 
 /* width */
