--- a/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
+++ b/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
@@ -5,7 +5,7 @@
   background-color: rgb(253, 250, 250);
   border-radius: 20px;
   position: relative;
-  margin-top: 5rem;
+  margin-bottom: 3rem;
   user-select: none;
 }
 
