--- a/src/components/Layout/JokeNavbar/JokeNavbarStyles.css
+++ b/src/components/Layout/JokeNavbar/JokeNavbarStyles.css
@@ -4,8 +4,9 @@
   height: 5rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  gap: 30%;
 }
 
 .jokeNavbarLogo {
@@ -18,6 +19,14 @@
   cursor: pointer;
 }
 
+.jokeMiddleLogo {
+  margin-left: 1rem;
+}
+
 .routesContainer {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
