--- a/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
+++ b/src/components/JokeHomePage/components/JokeCard/JokeCardStyles.css
@@ -116,8 +116,10 @@
   padding: 1rem;
   background-color: aliceblue;
   max-width: 11rem;
+  max-height: 3rem;
   font-family: "Roboto", sans-serif;
   font-size: 0.7rem;
+  text-overflow: ellipsis;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,11 +128,13 @@
 .favoriteIconS {
   height: 1rem;
   cursor: pointer;
+  display: none;
 }
 .likeIconS {
   height: 1rem;
   margin-right: 2rem;
   cursor: pointer;
+  display: none;
 }
 
 .jokeCardUserAction-containerS {
@@ -139,9 +143,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 1rem;
+  gap: 3rem;
   border-radius: 0 0 10px 10px;
 }
+
 .jokeAuthor {
   display: flex;
   align-items: center;
@@ -200,11 +205,13 @@
 .favoriteIconL {
   height: 1.5rem;
   cursor: pointer;
+  display: none;
 }
 .likeIconL {
   height: 1.5rem;
   margin-right: 2rem;
   cursor: pointer;
+  display: none;
 }
 
 .jokeCardUserAction-containerL {
@@ -212,7 +219,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 1rem;
+  gap: 17.5rem;
   border-radius: 0 0 10px 10px;
 }
 .arrowContainer {
