--- a/src/components/ProfilePage/components/JokeCarousel/JokeCarouselStyles.css
+++ b/src/components/ProfilePage/components/JokeCarousel/JokeCarouselStyles.css
@@ -1,16 +1,37 @@
 .carouselContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 3rem;
+  justify-content: flex-start; /* Align items to the left */
   width: 100%;
-  overflow-x: scroll;
-  background-color: rgb(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 2rem 0;
   scroll-behavior: smooth;
   user-select: none;
+  position: relative;
+  z-index: 0;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
 
 .carouselContainer::-webkit-scrollbar {
   display: none;
+}
+
+.JokeWrapper-carousel {
+  cursor: pointer;
+  position: relative;
+  bottom: 1.3rem;
+  transition: ease 1s;
+  z-index: 3;
+  margin: 0 2.3rem 0 2.3rem;
+
+  flex-shrink: 0;
+}
+
+.jokeWrapperDefault {
+  margin: 0 2.3rem 0 2.3rem;
+  cursor: pointer;
+
+  /* Prevent shrinking of items */
+  flex-shrink: 0;
 }
