--- a/src/components/ShopComponents/ShopLayout/ShopNavbarStyles.css
+++ b/src/components/ShopComponents/ShopLayout/ShopNavbarStyles.css
@@ -1,5 +1,8 @@
-.jokeNavbar {
-  background-color: #e97019;
+.shopNavbar {
+  background-image: url("/shopHomePageImages/shopNavbarLogo/shopNavbarPattern.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #8c52ff;
   width: 100%;
   height: 5rem;
   display: flex;
@@ -9,7 +12,7 @@
   gap: 30%;
 }
 
-.jokeNavbarLogo {
+.shopNavbarLogo {
   height: 100%;
   margin-left: 5rem;
 }
