ShopItemDisplay feature added

--- a/src/components/ShopComponents/ShopCardsContainer/ShopCardsContainerStyles.css
+++ b/src/components/ShopComponents/ShopCardsContainer/ShopCardsContainerStyles.css
@@ -1,6 +1,7 @@
 .shopCardsContainer {
   width: 70%;
   background-color: rgb(253, 253, 253);
+  overflow-y: scroll;
 }
 
 .cardsContainer-titleContainer {
